testdata/baselines/reference/submodule/compiler/inferentialTypingUsingApparentType1.errors.txt
inferentialTypingUsingApparentType1.ts(2,5): error TS2322: Type 'undefined' is not assignable to type 'T'.


==== inferentialTypingUsingApparentType1.ts (1 errors) ====
    function foo<T extends (p: string) => number>(x: T): T {
        return undefined;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
    }
    
    foo(x => x.length);